# ros2_xml_launch_test

ros1_xml_launch_test/: CMakeLists.txt  package.xml
ros1_xml_launch_test/launch/: first.launch  ros1_test.launch  ros1_test.launch.xml  second.launch
ros2_xml_launch_test/: CMakeLists.txt  package.xml
ros2_xml_launch_test/launch/: ros2_test.launch.xml
