<?xml version="1.0"?>
<package format="2">
  <name>ros1_xml_launch_test</name>
  <version>0.1.0</version>
  <description>The ros2_xml_launch_test package</description>
  <maintainer email="horibe.takamasa@gmail.com">Takamasa Horibe</maintainer>

  <license>Apache 2.0</license>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
