<?xml version="1.0"?>
<package format="2">
  <name>ros2_xml_launch_test</name>
  <version>0.1.0</version>
  <description>The ros2_xml_launch_test package</description>
  <maintainer email="horibe.takamasa@gmail.com">Takamasa Horibe</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <exec_depend>rclcpp</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
